--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,10 @@ descartes==1.1.0
 distro==1.8.0
 feature-engine==1.6.2
 fiona==1.9.5
+flashtext==2.7
 fonttools==4.45.1
 fuzzy-c-means==1.7.0
+gensim==4.3.2
 geopandas==0.14.1
 h11==0.14.0
 httpcore==1.0.2
@@ -55,6 +57,7 @@ pywin32==305.1
 regex==2023.10.3
 requests==2.31.0
 Rtree==1.1.0
+scattertext==0.1.19
 scikit-learn==1.3.2
 scipy==1.11.4
 seaborn==0.13.0
